# opc-cli

./: .gitignore  Cargo.toml  GEMINI.md  LICENSE  Makefile  README.md  TODO.md  architecture.md  check_detailed.txt  check_error.txt  check_errors.txt  check_errors_2.txt  check_errors_3.txt  check_final.txt  check_final_10.txt  check_final_12.txt  check_final_2.txt  check_final_3.txt  check_final_4.txt  check_final_5.txt  check_final_6.txt  check_final_7.txt  check_final_8.txt  check_final_9.txt  check_output.txt  clippy_output.json  coding_standard.md  commit.ps1  context.md  long_term_todo.md  rustfmt.toml  test_full.txt  test_results.txt  verify.ps1  verify.sh
.agent/scripts/: Sync-TaskList.ps1
.agent/workflows/: audit.md  log-audit.md  plan-making.md  prepublish.md
.cargo/: config.toml
opc-cli/: Cargo.toml  logfile_format.md
opc-cli/src/: app.rs  main.rs  ui.rs
opc-da-client/: CHANGELOG.md  Cargo.toml  README.md  architecture.md  rewrite.py  spec.md
opc-da-client/.winmd/: OPCCOMN.winmd
opc-da-client/src/: com_guard.rs  com_worker.rs  helpers.rs  lib.rs  provider.rs
opc-da-client/src/backend/: connector.rs  mod.rs  opc_da.rs
opc-da-client/src/bindings/: mod.rs
opc-da-client/src/bindings/comn/: mod.rs
opc-da-client/src/bindings/da/: bindings.rs
opc-da-client/src/opc_da/: com_utils.rs  def.rs  errors.rs  mod.rs  typedefs.rs
opc-da-client/src/opc_da/client/: iterator.rs  mod.rs  tests.rs
opc-da-client/src/opc_da/client/traits/: async_io.rs  async_io2.rs  async_io3.rs  browse.rs  browse_server_address_space.rs  client.rs  common.rs  connection_point_container.rs  data_callback.rs  data_object.rs  group_state_mgt.rs  group_state_mgt2.rs  item_deadband_mgt.rs  item_io.rs  item_mgt.rs  item_properties.rs  item_sampling_mgt.rs  mod.rs  public_group_state_mgt.rs  server.rs  server_public_groups.rs  sync_io.rs  sync_io2.rs
opc-da-client/src/opc_da/client/v1/: mod.rs
opc-da-client/src/opc_da/client/v2/: mod.rs
opc-da-client/src/opc_da/client/v3/: mod.rs
opc-da-client/src/opc_da/utils/: mod.rs  native.rs  try_iterator.rs
scripts/: Merge-ToMain.ps1  check-logs.ps1  commit.ps1  package.ps1  verify.ps1
src/: app.rs  main.rs  opc_impl.rs  traits.rs  ui.rs
