[workspace]
members = [
    "opc-da-client",
    "opc-cli",
    "vendor/opc_classic_utils",
    "vendor/opc_comn_bindings",
    "vendor/opc_da",
    "vendor/opc_da_bindings",
]
resolver = "2"

[workspace.dependencies]
# Vendored crates (path-based)
opc_da = { path = "vendor/opc_da" }
opc_da_bindings = { path = "vendor/opc_da_bindings" }
opc_comn_bindings = { path = "vendor/opc_comn_bindings" }
opc_classic_utils = { path = "vendor/opc_classic_utils" }

# Shared deps (unified features — superset of upstream + ours)
thiserror = "2.0"
windows = { version = "0.61.3", features = [
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_Security",
    "Win32_System_Com",
    "Win32_System_Com_StructuredStorage",
    "Win32_System_Ole",
    "Win32_System_Variant",
    "Win32_System_WinRT",
] }
windows-core = "0.61.2"
windows-bindgen = "0.62.1"

[workspace.lints.clippy]
all = { level = "deny", priority = -1 }
pedantic = { level = "warn", priority = -2 }
cargo = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
undocumented_unsafe_blocks = "deny"
# Individual lint overrides
must_use_candidate = "allow"
missing_errors_doc = "allow"
module_name_repetitions  = "allow"
multiple_crate_versions = "allow"
redundant_feature_names = "allow"
single_match_else = "allow"
option_if_let_else = "allow"
if_not_else = "allow"
missing_const_for_fn = "allow"
items_after_statements = "allow"
doc_markdown = "allow"
uninlined_format_args = "allow"

[workspace.lints.rust]
unsafe_code = "allow"
unreachable_pub = "allow"
unused_imports = "warn"
