[workspace]
members = [
    "opc-cli",
    "opc-da-client",
]
resolver = "2"

[workspace.dependencies]

# Shared deps (unified features — superset of upstream + ours)
thiserror = "2.0"
anyhow = "1.0.95"
tokio = { version = "1.43.0", features = ["rt", "rt-multi-thread", "sync", "macros"] }
tracing = "0.1.41"
windows = { version = "0.61.3", features = [
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_Security",
    "Win32_System_Com",
    "Win32_System_Com_StructuredStorage",
    "Win32_System_Ole",
    "Win32_System_Variant",
    "Win32_System_WinRT",
] }
windows-core = "0.61.2"

[workspace.lints.clippy]
all = { level = "deny", priority = -1 }
pedantic = { level = "warn", priority = -2 }
cargo = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
undocumented_unsafe_blocks = "deny"
# Individual lint overrides
must_use_candidate = "allow"
missing_errors_doc = "allow"
module_name_repetitions  = "allow"
multiple_crate_versions = "allow"
redundant_feature_names = "allow"
single_match_else = "allow"
option_if_let_else = "allow"
if_not_else = "allow"
missing_const_for_fn = "allow"
items_after_statements = "allow"
doc_markdown = "allow"
uninlined_format_args = "allow"

[workspace.lints.rust]
unsafe_code = "allow"
unreachable_pub = "allow"
unused_imports = "warn"
