[package]
name = "opc-cli"
version = "0.0.2"
edition = "2024"
rust-version = "1.93.1"
description = "Interactive TUI for browsing, reading, and writing OPC DA tags on Windows"
license = "MIT"
repository = "https://github.com/wends155/opc-cli"
readme = "../README.md"
keywords = ["opc", "cli", "tui", "windows"]
categories = ["command-line-utilities", "network-programming"]

[lints]
workspace = true

[dependencies]
opc-da-client = { path = "../opc-da-client", version = "0.0.2" }
ratatui = "0.29.0"
crossterm = "0.28.1"
tokio = { version = "1.43.0", features = ["full"] }
windows = { version = "0.61.3", features = ["Win32_System_Com"] }
anyhow = "1.0.95"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
tracing-appender-localtime = "0.2.4"
clap = { version = "4.5.28", features = ["derive"] }

[dev-dependencies]
opc-da-client = { path = "../opc-da-client", features = ["test-support"] }
mockall = "0.13.1"
