[package]
name = "opc-da-client"
version = "0.0.2"
edition = "2024"
rust-version = "1.93.1"
description = "Backend-agnostic OPC DA client library for Rust — async, trait-based, with RAII COM guard"
license = "MIT"
repository = "https://github.com/wends155/opc-cli"
readme = "README.md"
keywords = ["opc", "opc-da", "windows", "automation", "scada"]
categories = ["api-bindings", "network-programming"]

[lints]
workspace = true

[features]
default = ["opc-da-backend"]
opc-da-backend = ["dep:opc_da", "dep:opc_da_bindings"]
test-support = ["dep:mockall"]

[dependencies]
# Core (always included)
anyhow = "1.0.95"
async-trait = "0.1.86"
chrono = "0.4.43"
tokio = { version = "1.43.0", features = ["rt", "sync"] }
tracing = "0.1.41"
windows = { version = "0.61.3", features = [
    "Win32_System_Com",
    "Win32_System_Ole",
    "Win32_System_Variant",
    "Win32_Security",
    "Win32_Foundation",
] }

# Backend: opc_da (optional, default-on)
opc_da = { version = "0.3.1", optional = true }
opc_da_bindings = { version = "0.3.1", optional = true }

# Test support: mock provider (optional)
mockall = { version = "0.13.1", optional = true }
