[package]
name = "opc-da-client"
version = "0.1.0"
edition = "2024"
rust-version = "1.93.1"
description = "Backend-agnostic OPC DA client library for Rust — async, trait-based, with RAII COM guard"
license = "MIT"
repository = "https://github.com/wends155/opc-cli"
readme = "README.md"
keywords = ["opc", "opc-da", "windows", "automation", "scada"]
categories = ["api-bindings", "network-programming"]
exclude = [
    ".winmd/",
    "architecture.md",
    "spec.md",
]

[lints]
workspace = true

[features]
default = ["opc-da-backend"]
opc-da-backend = []
test-support = ["dep:mockall"]

[dependencies]
# Core (always included)
anyhow = { workspace = true }
async-trait = "0.1.86"
chrono = "0.4.43"
tokio = { workspace = true }
tracing = { workspace = true }
# OS: Windows (required)
windows = { workspace = true }
windows-core = { workspace = true }

# Test support: mock provider (optional)
mockall = { version = "0.13.1", optional = true }
